working on IT for remote controller